<resources>
    <string name="app_name">Login-Register_SharedPref</string>
    <string name="enter_password_reg">Enter Password</string>
    <string name="enter_username_reg">Enter Username</string>
    <string name="register_reg">Register</string>
    <string name="register_btn">REGISTER</string>
    <string name="enter_e_mail_id">Enter E-mail id</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_btn">Login</string>
    <string name="register">Register</string>
    <string name="log_in">Log-in</string>
    <string name="textview">TextView</string>
</resources>
